@@ -7,10 +7,10 @@ import io.quarkus.maven.dependency.Dependency;
 import io.quarkus.maven.dependency.DependencyFlags;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.eclipse.aether.util.artifact.JavaScopes;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -21,8 +21,8 @@ import org.junit.jupiter.api.Test;
 public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
 
     protected TsArtifact root;
-    protected List<Dependency> expectedResult = Collections.emptyList();
-    protected List<Dependency> deploymentDeps = Collections.emptyList();
+    protected List<Dependency> expectedResult = List.of();
+    protected List<Dependency> deploymentDeps = List.of();
 
     @Override
     @BeforeEach
@@ -57,12 +57,12 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     }
 
     protected Path getInstallDir(TsArtifact artifact) {
-        return repoHome.resolve(artifact.getGroupId().replace('.', '/')).resolve(artifact.getArtifactId())
+        return getInstallDir().resolve(artifact.getGroupId().replace('.', '/')).resolve(artifact.getArtifactId())
                 .resolve(artifact.getVersion());
     }
 
     protected TsArtifact install(TsArtifact dep, boolean collected) {
-        return install(dep, collected ? "compile" : null);
+        return install(dep, collected ? JavaScopes.COMPILE : null);
     }
 
     protected TsArtifact install(TsArtifact dep, String collectedInScope) {
@@ -74,7 +74,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     }
 
     protected TsArtifact install(TsArtifact dep, Path p, boolean collected) {
-        return install(dep, p, collected ? "compile" : null, false);
+        return install(dep, p, collected ? JavaScopes.COMPILE : null, false);
     }
 
     protected TsArtifact install(TsArtifact dep, Path p, String collectedInScope, boolean optional) {
@@ -93,7 +93,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     protected void install(TsQuarkusExt ext, boolean collected) {
         ext.install(repo);
         if (collected) {
-            addCollectedDep(ext.getRuntime(), "compile", false, DependencyFlags.RUNTIME_EXTENSION_ARTIFACT);
+            addCollectedDep(ext.getRuntime(), JavaScopes.COMPILE, false, DependencyFlags.RUNTIME_EXTENSION_ARTIFACT);
             addCollectedDeploymentDep(ext.getDeployment());
         }
     }
@@ -101,7 +101,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
     protected void installAsDep(TsQuarkusExt ext) {
         ext.install(repo);
         root.addDependency(ext);
-        addCollectedDep(ext.getRuntime(), "compile", false,
+        addCollectedDep(ext.getRuntime(), JavaScopes.COMPILE, false,
                 DependencyFlags.DIRECT | DependencyFlags.RUNTIME_EXTENSION_ARTIFACT
                         | DependencyFlags.TOP_LEVEL_RUNTIME_EXTENSION_ARTIFACT);
         addCollectedDeploymentDep(ext.getDeployment());
@@ -142,11 +142,11 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
         for (int f : flags) {
             allFlags |= f;
         }
-        addCollectedDep(artifact, dep.scope == null ? "compile" : dep.scope, dep.optional, allFlags);
+        addCollectedDep(artifact, dep.scope == null ? JavaScopes.COMPILE : dep.scope, dep.optional, allFlags);
     }
 
     protected void addCollectedDep(final TsArtifact artifact, int... flags) {
-        addCollectedDep(artifact, "compile", false, flags);
+        addCollectedDep(artifact, JavaScopes.COMPILE, false, flags);
     }
 
     protected void addCollectedDep(final TsArtifact artifact, final String scope, boolean optional, int... flags) {
@@ -168,7 +168,7 @@ public abstract class CollectDependenciesBase extends ResolverSetupCleanup {
             deploymentDeps = new ArrayList<>();
         }
         deploymentDeps
-                .add(new ArtifactDependency(ext.toArtifact(), "compile",
+                .add(new ArtifactDependency(ext.toArtifact(), JavaScopes.COMPILE,
                         DependencyFlags.DEPLOYMENT_CP));
     }
 
